add invoices list

--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -12,13 +12,13 @@
   <% end %>
 
   <div>
-    <%= form.label :invoice_number, style: "display: block" %>
-    <%= form.text_field :invoice_number %>
+    <%= form.label :number, style: "display: block" %>
+    <%= form.text_field :number %>
   </div>
 
   <div>
-    <%= form.label :invoice_date, style: "display: block" %>
-    <%= form.date_field :invoice_date %>
+    <%= form.label :date, style: "display: block" %>
+    <%= form.date_field :date %>
   </div>
 
   <div>
