--- a/app/views/invoices/_invoice.html.erb
+++ b/app/views/invoices/_invoice.html.erb
@@ -1,12 +1,12 @@
 <div id="<%= dom_id invoice %>">
   <p>
     <strong>Invoice number:</strong>
-    <%= invoice.invoice_number %>
+    <%= invoice.number %>
   </p>
 
   <p>
     <strong>Invoice date:</strong>
-    <%= invoice.invoice_date %>
+    <%= invoice.date %>
   </p>
 
   <p>
