--- a/app/views/tokens/new.html.erb
+++ b/app/views/tokens/new.html.erb
@@ -2,8 +2,6 @@
 
   <div class="card">
     <div class="card-body">
-      <div style="color: red;"><%= notice %></div>
-
       <%= form_with url: tokens_path do |f| %>
         <div class="mb-3">
           <%= f.label :email, class: 'form-label' %>
@@ -14,5 +12,9 @@
       <% end %>
     </div>
   </div>
+
+  <% unless @alert.nil? %>
+    <div class="alert alert-danger"><%= @alert %></div>
+  <% end %>
 
 </div>
