--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,53 +1,48 @@
 <div class="card">
   <div class="card-body">
     <%= form_with(model: invoice) do |f| %>
-      <% if invoice.errors.any? %>
-        <div style="color: red">
-          <h2><%= pluralize(invoice.errors.count, "error") %> prohibited this invoice from being saved:</h2>
-
-          <ul>
-            <% invoice.errors.each do |error| %>
-              <li><%= error.full_message %></li>
-            <% end %>
-          </ul>
-        </div>
-      <% end %>
 
       <div class="row mb-3">
         <div class="col-6 col-lg-4">
           <%= f.label :number, class: 'form-label' %>
-          <%= f.text_field :number, class: 'form-control' %>
+          <%= f.text_field :number, class: "form-control#{' is-invalid' if @errors && @errors[:number]}" %>
+          <%= invalid_feedback_for(@errors, :number) %>
         </div>
 
         <div class="col-6 col-lg-4">
           <%= f.label :total_amount_due, class: 'form-label' %>
-          <%= f.text_field :total_amount_due, class: 'form-control' %>
+          <%= f.text_field :total_amount_due, class: "form-control#{' is-invalid' if @errors && @errors[:total_amount_due]}" %>
+          <%= invalid_feedback_for(@errors, :total_amount_due) %>
         </div>
 
         <div class="col-auto">
           <%= f.label :date, class: 'form-label' %>
-          <%= f.date_field :date, class: 'form-control' %>
+          <%= f.date_field :date, class: "form-control#{' is-invalid' if @errors && @errors[:date]}" %>
+          <%= invalid_feedback_for(@errors, :date) %>
         </div>
       </div>
 
       <div class="row mb-3">
-        <div>
+        <div class="col-12">
           <%= f.label :customer_name, class: 'form-label' %>
-          <%= f.text_field :customer_name, class: 'form-control' %>
+          <%= f.text_field :customer_name, class: "form-control#{' is-invalid' if @errors && @errors[:customer_name]}" %>
+          <%= invalid_feedback_for(@errors, :customer_name) %>
         </div>
       </div>
 
       <div class="row mb-3">
-        <div>
+        <div class="col-12">
           <%= f.label :customer_notes, class: 'form-label' %>
-          <%= f.text_area :customer_notes, class: 'form-control' %>
+          <%= f.text_area :customer_notes, class: "form-control#{' is-invalid' if @errors && @errors[:customer_notes]}" %>
+          <%= invalid_feedback_for(@errors, :customer_notes) %>
         </div>
       </div>
 
       <div class="row mb-3">
-        <div>
+        <div class="col-12">
           <%= f.label :emails, class: 'form-label' %>
-          <%= f.text_field :emails, class: 'form-control' %>
+          <%= f.text_field :emails, class: "form-control#{' is-invalid' if @errors && @errors[:emails]}" %>
+          <%= invalid_feedback_for(@errors, :emails) %>
         </div>
       </div>
 
