--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,9 +1,16 @@
-<p style="color: green"><%= notice %></p>
+<div class="home container mt-4">
 
-<%= render @invoice %>
+  <p style="color: green"><%= notice %></p>
 
-<div>
-  <%= link_to "Send to more emails", edit_invoice_path(@invoice) %> |
-  <%= link_to "Back to invoices", invoices_path %>
+  <%= render @invoice %>
+
+  <div>
+    <% if current_user %>
+      <%= link_to "Send to more emails", edit_invoice_path(@invoice) %> |
+    <% end %>
+    <%= link_to "Download", download_invoice_path(@invoice), download: 'invoice.pdf' %>
+  </div>
+
+  <%= link_to "<< Back to invoices", invoices_path %>
+
 </div>
-<%= link_to "Download", download_invoice_path(@invoice), download: 'invoice.pdf' %>
